[package]
name = "hello_rust"
version = "0.1.0"
authors = ["zhang2014 <coswde@gmail.com>"]
edition = "2018"
include = ["benches/*.rs", "src/**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "bench_main"
harness = false

